--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "loopstudios",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,12 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "classgroup": "^1.1.1",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22"
   }
 }
