--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "^12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-use": "^17.3.2",
+    "tailwind-hamburgers": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
